<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/name"/>

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_info"
            android:layout_below="@+id/tv_item_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            tools:text="@string/user_name"/>
        <LinearLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/followers"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/following"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">
                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/followers"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/following"
                    android:textSize="12sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_detail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_toRightOf="@+id/img_item_photo"
                android:layout_below="@+id/layout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:text="@string/detail"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>